Task Manager doesn't show the GPU memory of processes on ChromeOS

On ozone platforms, the message GpuHostMsg_VideoMemoryUsageStats used to be
skipped and not handled. Hence the task manager never received those stats.

BUG=629873
TEST=manually open the task manager and show the GPU memory column. Data should be there

Review-Url: https://codereview.chromium.org/2285983002
Cr-Commit-Position: refs/heads/master@{#415224}

Former-commit-id: 77b0dcbf37f91f60f35689c1004802331f949ee0