ui/ozone/platform/drm/host/drm_gpu_platform_support_host.cc
@@ -254,7 +254,8 @@ bool DrmGpuPlatformSupportHost::OnMessageReceivedForDrmOverlayManager(
   IPC_BEGIN_MESSAGE_MAP(DrmGpuPlatformSupportHost, message)
     IPC_MESSAGE_HANDLER(OzoneHostMsg_OverlayCapabilitiesReceived,
                         OnOverlayResult)
-  // TODO(rjk): insert the extra
+    // TODO(rjk): insert the extra
+    IPC_MESSAGE_UNHANDLED(handled = false)
   IPC_END_MESSAGE_MAP()
   return handled;
 }
